--- a/src/views/bookDetail.ejs
+++ b/src/views/bookDetail.ejs
@@ -25,8 +25,12 @@
           <p class="lead mb-4 fw-bold">Release Date: <%= book.releaseDate %></p>
           <p class="lead mb-4"><%= book.description %></p>
           <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-            <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Edit</button>
-            <button type="button" class="btn btn-outline-secondary btn-lg px-4">Delete</button>
+            <% if (user && user.isAdmin) { %>
+            <a href="/books/edit/<%= book.id %>" class="btn btn-primary btn-lg px-4 gap-3">Edit</a>
+          <form action="/books/<%= book.id %>?_method=DELETE" method="POST">
+            <button type="submit" class="btn btn-outline-secondary btn-lg px-4">Delete</button>
+          </form>
+        <% } %>
           </div>
         </div>
       </div>
