--- a/src/views/bookDetail.ejs
+++ b/src/views/bookDetail.ejs
@@ -27,7 +27,7 @@
           <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
             <% if (user && user.isAdmin) { %>
             <a href="/books/edit/<%= book.id %>" class="btn btn-primary btn-lg px-4 gap-3">Edit</a>
-          <form action="/books/<%= book.id %>?_method=DELETE" method="POST">
+          <form action="/books/delete/<%= book.id %>?_method=DELETE" method="POST">
             <button type="submit" class="btn btn-outline-secondary btn-lg px-4">Delete</button>
           </form>
         <% } %>
